# ghsrch

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
doc/: search_code_schema.json  search_commit_schema.json  search_schema.json
example/: ghsrchr.py
src/: lib.rs
src/api/: client.rs  errors.rs  mod.rs  query.rs  schema.rs
tests/: query.py
